Fix bug where hourly weather info would have visible scrollbars on some browsers

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -127,7 +127,7 @@ body {
         margin-bottom: 35px;
         display: flex;
         gap: 28px;
-        overflow: scroll;
+        overflow: hidden;
 
         & .scroll-btn {
           border-radius: 25px;
